fixed tictactoe responsiveness and attempt to remove scrollbar part3

--- a/src/games/Tictactoe/style.css
+++ b/src/games/Tictactoe/style.css
@@ -1,11 +1,3 @@
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
 button[id='tile'] {
   height: 150px;
   width: 150px;
